# SPH

./: CMakeLists.txt  ColorRGBA.hpp  Cores.h  Gizmo.cpp  SPH_2D_CompactNSearch_GLFW_AVX.kdev4  kdtree.hh  main.cpp  main_back_up.cpp  main_bak.cpp  main_use_example.cpp  neighbordata.hh  plycpp.h  sph.hh  stb_image.cpp
CMake/: SetUpExternalProjects.cmake
Utilities/: AVX_math.h  vector.hh
clouds/: aaa.ply  elefante_p.ply  elefante_pr.ply  mini.ply  sem_parede.ply  topo.ply  topop.ply
configuration/: root_directory.h
includes/: AVX_math.h  Particleshader.hh  taichi.h  texture.cpp  texture.hh  vector.hh
includes/glm/ext/: matrix_projection.inl
includes/imgui/: imgui_demo.cpp
includes/learnopengl/: camera.h
includes/lgl/: FluidShader.h  lgl.h
lgl/: FluidShader.cpp
plycpp-master/hdr/: plycpp.h
resources/colormaps/: colormap_jet.h
resources/properties/: 3.3.shader.fs  3.3.shader.vs  Particle.fragmentshader  fs_VF_test.glsl  fs_points.glsl  fs_vectorField.glsl  fs_vectorField_Test.glsl  fs_vectorField_color.glsl  fs_vectorField_color2.glsl  gs_vectorField.glsl  gs_vectorField_color.glsl  imgui.ini  innerShader.fs  innerShader.vs  particle.fs  particle.vs  particleInstancing.fs  particleInstancing.geo  particleInstancing.gs  particleInstancing.vs  plane_lighting.fs  sphere.fs  sphere.vs  surfaceshader.fs  surfaceshader.vs  test_fs.glsl  vs_points_scalar.glsl  vs_vectorField.glsl  vs_vectorField_scalar.glsl
resources/shaders/: framebuffers_screen.fs  framebuffers_screen.vs
